@@ -30,7 +30,7 @@
 
 <h2>How do I...</h2>
 <h3>use Referencer with BibTeX?</h3>
-<p>Referencer maintains its own library of your documents, rather than loading and editing a BibTeX file.  As such, when you're ready to use your library in your LaTeX document, you can have Referencer generate a BibTeX file (<i>Library->Export to BibTeX</i>).  Rather than repeatedly exporting when you make changes, you can tell Referencer to write the BibTeX file every time you change your library (<i>Library->Manage BibTeX File</i>).</p>
+<p>Referencer maintains its own library of your documents, rather than loading and editing a BibTeX file.  As such, when you're ready to use your library in your LaTeX document, you can have Referencer generate a BibTeX file (<i>Library->Export to BibTeX</i>).  By default this will include all documents in your library: if you would rather only export some documents then you can use the <i>Selection:</i> field in the export dialog to restrict the export to certain documents.  Rather than repeatedly exporting when you make changes, you can tell Referencer to write the BibTeX file every time you change your library (<i>Library->Manage BibTeX File</i>).</p>
 </p>
 <p>Referencer will automatically handle conversion of special characters (e.g. ß) to their LaTeX equivalents (e.g. \ss).  Depending on the BibTeX style you are using in your work, capitalisation of text in your latex output may differ from that in your Referencer library.  This is to allow publishers to impose their own capitalisation schemes.  If you want text to be capitalised in your work exactly as it is in your library, then you can use the <i>Protect capitalization</i> option in the BibTeX export dialog.</p>
 
